Closed
Bug 264324
Opened 21 years ago
Closed 21 years ago
incorrect defines in s390/s390x
Categories
(NSPR :: NSPR, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
4.6
People
(Reporter: wolfiR, Assigned: wtc)
Details
(Keywords: fixed-aviary1.0.4, fixed1.7.8)
Attachments
(1 file, 1 obsolete file)
|
4.25 KB,
patch
|
shaver
:
approval-aviary1.0.5+
shaver
:
approval1.7.8+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a5) Gecko/20041013
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a5) Gecko/20041013
according to one of our s390 developers the s390x platform does define the s390,
too. Therefore I suggest the attached patch to avoid problems.
Reproducible: Always
Steps to Reproduce:
.
| Reporter | ||
Comment 1•21 years ago
|
||
| Reporter | ||
Updated•21 years ago
|
Attachment #162058 -
Flags: review?(wchang0222)
| Assignee | ||
Updated•21 years ago
|
Attachment #162058 -
Flags: review?(wchang0222) → review+
| Reporter | ||
Comment 2•21 years ago
|
||
wtc: thanks for review. Could you please check this in? It seems NSPR
write-access is rare ;-)
Comment 3•21 years ago
|
||
Wolfgang, you should ask for the right to create bug as new, especially for when
you enter bugs for the s390 arch.
If wtc doesn't answer, try to ping some other of the NSPR peers.
But I too think it will be a bit uneasy to get a patch inside NSPR :-)
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 4•21 years ago
|
||
This is what I actually checked in. I simply
test for __s390x__ before __s390__. Just a
matter of personal preference.
Attachment #162058 -
Attachment is obsolete: true
| Assignee | ||
Comment 5•21 years ago
|
||
I checked in the patch on the NSPR trunk (NSPR 4.6)
and NSPRPUB_PRE_4_2_CLIENT_BRANCH (post Mozilla 1.8
Alpha 4).
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → 4.6
| Reporter | ||
Comment 6•21 years ago
|
||
thanks, that looks nicer ;-)
Comment 7•21 years ago
|
||
Comment on attachment 162522 [details] [diff] [review]
Patch as checked in
Want this on the branches for the distributors that care about s390(x).
Attachment #162522 -
Flags: approval1.7.8?
Attachment #162522 -
Flags: approval-aviary1.0.4?
Comment 8•21 years ago
|
||
Comment on attachment 162522 [details] [diff] [review]
Patch as checked in
a=shaver for our branchen.
Attachment #162522 -
Flags: approval1.7.8?
Attachment #162522 -
Flags: approval1.7.8+
Attachment #162522 -
Flags: approval-aviary1.0.4?
Attachment #162522 -
Flags: approval-aviary1.0.4+
Updated•21 years ago
|
Keywords: fixed-aviary1.0.4,
fixed1.7.8
You need to log in
before you can comment on or make changes to this bug.
Description
•