Bugzilla bug 264324: we need to test for __s360x__ before __s360__ because the s360x platform also defines __s360__.  The patch is contributed by Wolfgang Rosenauer <mozilla@rosenauer.org>.  r=wtc. Modified Files: _linux.cfg _linux.h