nsprpub/pr/include/md/_linux.h
@@ -66,10 +66,10 @@
 #define _PR_SI_ARCHITECTURE "arm"
 #elif defined(__hppa__)
 #define _PR_SI_ARCHITECTURE "hppa"
-#elif defined(__s390__)
-#define _PR_SI_ARCHITECTURE "s390"
 #elif defined(__s390x__)
 #define _PR_SI_ARCHITECTURE "s390x"
+#elif defined(__s390__)
+#define _PR_SI_ARCHITECTURE "s390"
 #else
 #error "Unknown CPU architecture"
 #endif
